Deploy/Kuberenetes/employee-loadbalancer.yaml
apiVersion: v1

kind: Service

metadata:
  name: employee-lb

spec:
  type: LoadBalancer
  selector:
    app: employeeservice
  ports:
    - port: 80
      targetPort: 80
