Deploy/Kuberenetes/employee-nodeport.yaml
apiVersion: v1

kind: Service

metadata:
  name: employee-np-srv

spec:
  type: NodePort
  selector:
    app: employeeservice
  ports:
    - name: employeeservice
      protocol: TCP
      port: 80
      targetPort: 80
