Deploy/Kuberenetes/leave-request-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaverequest-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaverequestservice
  template:
    metadata:
      name: leaverequest-deployment
      labels:
        app: leaverequestservice
    spec:
      containers:
        - name: leaverequestservice
          image: mtahaelmaghrabi/leaverequestservice:latest
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: leaverequest-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: leaverequestservice
  ports:
  - name: leaverequestservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1

kind: Service

metadata:
  name: leave-np-srv

spec:
  type: NodePort
  selector:
    app: leaverequestservice
  ports:
    - name: leaverequestservice
      protocol: TCP
      port: 80
      targetPort: 80
