Deploy/Kuberenetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: hrportal.com
      http:
        paths:
          - path: /api/employee
            pathType: Prefix
            backend:
              service:
                name: employee-clusterip-srv
                port:
                  number: 80
          - path: /api/leave/leaverequest
            pathType: Prefix
            backend:
              service:
                name: leaverequest-clusterip-srv
                port:
                  number: 80
